[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/members/screens/member_detail.gd" id="1_member_detail"]

[node name="MemberDetail" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_member_detail")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HeaderRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CHARACTER NAME"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CycleHintLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
text = "L/R: Switch Character"
horizontal_alignment = 2
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.8, 0.8, 0.85, 1)
text = "Lv1 Knight  HP: 20/20  MP: 0/0"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="LeftColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/separation = 12

[node name="EquipmentSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentHBox/LeftColumn"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="EquipmentHeader" type="Label" parent="MarginContainer/VBoxContainer/ContentHBox/LeftColumn/EquipmentSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "EQUIPMENT"

[node name="EquipmentList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentHBox/LeftColumn/EquipmentSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="InventorySection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentHBox/LeftColumn"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="InventoryHeader" type="Label" parent="MarginContainer/VBoxContainer/ContentHBox/LeftColumn/InventorySection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "INVENTORY"

[node name="InventoryScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentHBox/LeftColumn/InventorySection"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="InventoryList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentHBox/LeftColumn/InventorySection/InventoryScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="RightColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="DetailsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/ContentHBox/RightColumn"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="DetailsMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/ContentHBox/RightColumn/DetailsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="DetailsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentHBox/RightColumn/DetailsPanel/DetailsMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ItemNameLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentHBox/RightColumn/DetailsPanel/DetailsMargin/DetailsVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 1, 0.9, 1)
text = "ITEM NAME"

[node name="ItemDescLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentHBox/RightColumn/DetailsPanel/DetailsMargin/DetailsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "Item description and stats will appear here."
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FooterRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ResultLabel" type="Label" parent="MarginContainer/VBoxContainer/FooterRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = ""
vertical_alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/FooterRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 18
text = "BACK"
